[package]
name = "timereport"
version = "0.1.0"
edition = "2021"
description = "A small command-line utility for reporting working time and displaying it in different formats."
license = "MIT"
repository = "https://github.com/Godsmith/timereport"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.35", features = ["serde", "rustc-serialize"]}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tabled = "0.15.0"
