[package]
name = "timereport"
version = "0.1.0"
edition = "2018"
description = "A small command-line utility for reporting working time and displaying it in different formats."
license = "MIT"
repository = "https://github.com/Godsmith/timereport"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build_html = "2.4.0"
chrono = {version = "0.4.35", features = ["serde", "rustc-serialize"]}
open = "5.1.4"
regex = "1.10.4"
rstest = "0.19.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tabled = "0.15.0"
tempfile = "3.10.1"

[features]
mock-open = []
