[package]
name = "timereport"
version = "0.2.7"
edition = "2021"
description = "A small command-line utility for reporting working time and displaying it in different formats."
license = "MIT"
repository = "https://github.com/Godsmith/timereport"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build_html = "2.4.0"
chrono = {version = "0.4.35", features = ["serde"]}
open = "5.1.4"
regex = "1.10.4"
rstest = "0.19.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tabled = "0.15.0"
temp-env = "0.3.6"
tempfile = "3.10.1"

[features]
mock-open = []

# Load mock-open when running cargo test
# Solution from https://stackoverflow.com/questions/72736661/how-to-stub-an-external-crate-or-ways-around-it-in-rust
[dev-dependencies]
timereport = {path = ".", features = ["mock-open"]}

